# halium_bootable_recovery

./: Android.bp  Android.mk  gemian_install_config.cpp  gemian_install_config.h  gemian_setup.cpp  para_variables.cpp  para_variables.h  screen_ui.cpp  yamui.cpp
minui/: graphics.cpp  resources.cpp
minui/include/minui/: minui.h
recovery_ui/: device.cpp  screen_ui.cpp  ui.cpp
recovery_ui/include/recovery_ui/: ui.h
tests/para/: CMakeLists.txt  para-broken.img  para-dvorak.img  para-gb.img  para-jp.img  para-nosig1.img  para-nosig2.img  test_gemian_install_config.cpp  test_keyboard_selection.cpp
